--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ a:hover {
     border-radius: 50% 50% 50% 50%;
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
     transition: 1s;
+    margin: 80px;
 }
 
 .avatar:hover{
@@ -24,21 +25,13 @@ a:hover {
 
 }
 
-/* .background{
-    background: url(https://ejosue.com/wp-content/uploads/2014/04/thumbnail-1.png);
-
-} */
 
 body {
-    background: url(https://ejosue.com/wp-content/uploads/2014/04/thumbnail-1.png);
+    background: url(thumbnail.png);
     display: flex;
     line-height: 1.5;
 }
-/* body:hover{
-    opacity: 1;
-    scale: 110%; */
 
-/* } */
 
 body { 
     background-color: #030303; 
@@ -69,6 +62,7 @@ p,li,td,tr {
 }
 
 .container {
-    max-width: 300px;
+    max-width: 500px;
     margin: auto;
+    
 }
